--- a/assets/sass/3-component/_accordion.sass
+++ b/assets/sass/3-component/_accordion.sass
@@ -134,7 +134,7 @@
   text-transform: uppercase
   font-weight: $font-regular
   text-align: center
-  padding: 15px
+  padding: 15px 0
   margin-bottom: 15px
   &:first-of-type
     margin-left: 15px
