--- a/assets/sass/4-pages/_dashboard.scss
+++ b/assets/sass/4-pages/_dashboard.scss
@@ -81,6 +81,7 @@
             width: 100%;
             font-size: $font-m;
             text-transform: uppercase;
+            min-height: 70px;
         }
     }
 }
