--- a/assets/sass/4-pages/_ui.sass
+++ b/assets/sass/4-pages/_ui.sass
@@ -70,7 +70,7 @@
 	&:focus
 		@include border-radius(2px)
 		// box-shadow: 0 2px 0 0 $default
-		border-color: $default
+		border-color: $input-border
 		//background: transparent
 		//color: $black
 	&:readonly
