--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -36,6 +36,7 @@
 @import "3-component/form-modal.scss";
 @import "3-component/main-header.sass";
 @import "3-component/modal.scss";
+@import "3-component/modal.sass";
 @import "3-component/progress.scss";
 @import "3-component/rangeslider.scss";
 @import "3-component/_sidebar-list.sass";
