--- a/assets/sass/3-component/_modal.sass
+++ b/assets/sass/3-component/_modal.sass
@@ -1,6 +1,3 @@
-.modal-backdrop
-    opacity: 0 !important
-
 .modal
     position: fixed
     top: 0
@@ -20,7 +17,7 @@
 .modal-dialog.mini
     min-width: 500px !important
 .modal-dialog
-    min-width: 950px
+    min-width: 80%
     text-align: left
     display: inline-block
     vertical-align: middle
@@ -28,8 +25,6 @@
     @include box-shadow($box-shadow-default)
     @include border-radius(5px)
     margin: 10px auto
-    .btn
-        margin-left: $m-10
 
 // custom modal
 .modal-dialog-content
