--- a/assets/sass/3-component/_form-modal.scss
+++ b/assets/sass/3-component/_form-modal.scss
@@ -167,6 +167,7 @@
         text-align: right;
         margin-left: auto;
         justify-content: flex-end;
+        margin-right: 15px;
         .form-group{
             width: auto;
         }
