--- a/assets/sass/3-component/_modal.scss
+++ b/assets/sass/3-component/_modal.scss
@@ -4,6 +4,11 @@
     max-width: 1180px;
 }
 
+.modal-dialog{
+    min-width: 85%;
+    max-width: 1200px;
+}
+
 .custom-modal{
     width: 100%;
     float: left;
@@ -47,46 +52,7 @@
             margin-right: 10px;
             font-size: $font-xs;
             font-weight: $font-semibold;
-        }
-        .ui-select-bootstrap{
-            width: 100%;
-            float: right;
-            min-width: 200px;
-            .form-control{
-                @extend .silver-gradient;
-                p{
-                    margin-bottom: 0px;
-                    i{
-                        color: $default;
-                        margin-right: 6px;
-                    }
-                }
-            }
-            .ui-select-choices{
-                background: $white;
-                .ui-select-choices-row{
-                    .ui-select-choices-row-inner{
-                        background: $white;
-                        display: flex;
-                        align-items: center;
-                        height: 38px;
-                        color: $black;
-                        padding-left: 33px !important;
-                        &:hover{
-                            background: $default;
-                            color: $white;
-                            @include border-radius(0px !important)
-                        }                        
-                    }
-                    &:first-of-type a{
-                        @include border-radius(5px 5px 0 0 !important);
-                    }
-                    &:last-of-type a{
-                        @include border-radius(0px 0px 5px 5px !important);
-                    }
-                }
-            }
-        }
+        }        
     }
     .custom-modal-body{
         width: 100%;
@@ -103,6 +69,57 @@
         margin-top: 30px;
         .btn{
             min-width: 155px;
+        }
+    }
+    .ui-select-bootstrap{
+        width: 100%;
+        float: right;
+        .selected-item{
+            min-width: 200px;
+            &.wd-auto{
+                min-width: auto;
+            }
+        }
+        .form-control{
+            @extend .silver-gradient;
+            p{
+                margin-bottom: 0px;
+                i{
+                    color: $default;
+                    margin-right: 6px;
+                }
+            }
+        }
+        .ui-select-choices{
+            background: $white;
+            &.default-select-items{
+                .ui-select-choices-row{
+                    .ui-select-choices-row-inner{
+                        padding-left: 10px !important;
+                    }
+                }
+            }
+            .ui-select-choices-row{
+                .ui-select-choices-row-inner{
+                    background: $white;
+                    display: flex;
+                    align-items: center;
+                    height: 38px;
+                    color: $black;
+                    padding-left: 33px !important;
+                    &:hover{
+                        background: $default;
+                        color: $white;
+                        @include border-radius(0px !important)
+                    }                        
+                }
+                &:first-of-type a{
+                    @include border-radius(5px 5px 0 0 !important);
+                }
+                &:last-of-type a{
+                    @include border-radius(0px 0px 5px 5px !important);
+                }
+            }
         }
     }
 }
