--- a/assets/sass/3-component/_search.scss
+++ b/assets/sass/3-component/_search.scss
@@ -52,6 +52,7 @@
 
 .search-card{
     &.search-category{
+        margin-bottom: 10px;
         .card-img{
             position: relative;
             @include border-radius(0px);
@@ -65,6 +66,9 @@
                 font-weight: $font-medium;
                 @include absolute-center();
             }
+        }
+        .card-footer{
+            min-height: 169px;
         }
     }
     .search-top{
@@ -105,6 +109,19 @@
     @media (max-width: 1280px){
         .card-img{
             min-height: 150px;
+        }
+        .search-footer{
+            min-height: 118px !important;
+        }
+    }
+    @media (min-width: 1441px){
+        .search-footer{
+            min-height: 148px !important;
+        }
+    }
+    @media (min-width: 1700px) {
+        .search-footer{
+            min-height: 112px !important;
         }
     }
 }
