--- a/assets/sass/4-pages/_ui.sass
+++ b/assets/sass/4-pages/_ui.sass
@@ -3,6 +3,8 @@
 
 .form-group
 	margin-bottom: 0
+	margin-left: 0px !important
+	margin-right: 0px !important
 .form-group
 	position: relative
 	width: 100%
@@ -17,6 +19,7 @@
 		z-index: 10
 		margin-bottom: 5px
 		text-transform: uppercase
+		text-align: left
 	.label-img
 		padding: 5px
 		border: 1px solid $border
