--- a/assets/sass/3-component/_modal.scss
+++ b/assets/sass/3-component/_modal.scss
@@ -9,6 +9,11 @@
     border: 0px;
 }
 
+.form-modal{
+    width: 90% !important;
+    max-width: 1200px;
+}
+
 .custom-modal{
     width: 100%;
     float: left;
