--- a/assets/sass/2-basics/_body-elements.sass
+++ b/assets/sass/2-basics/_body-elements.sass
@@ -1,8 +1,13 @@
+html
+	overflow: hidden
+	height: 100%
 /* Body elements */
 body
 	background-color: $body-bg
 	font-size: 14px
 	font-family: $font-default
+	overflow: auto
+	height: 100%
 	&.nothome
 		background: $body-bg
 
