--- a/assets/sass/3-component/_form-modal.scss
+++ b/assets/sass/3-component/_form-modal.scss
@@ -34,6 +34,10 @@
     &.upload-wrapper{
         width: 100%;
         padding: 0px;
+        background-repeat: no-repeat!important;
+        background-position: center center!important;
+        background-size: cover!important;
+        background-size: 100%!important;
         iframe, img, video{
             width: 100%;
             height: 100%;
@@ -129,6 +133,10 @@
             background: $white;
             transition: all 0.2s;
             @include border-radius(4px); 
+            background-repeat: no-repeat!important;
+            background-position: center center!important;
+            background-size: cover!important;
+            background-size: 100%!important;
             &:hover, &.active{
                 background: $success;
                 border: 5px solid $success;
