--- a/assets/sass/4-pages/_products.scss
+++ b/assets/sass/4-pages/_products.scss
@@ -152,7 +152,8 @@
     display: flex;
     align-items: center;
     .product-img{
-        width: 80px;
+        min-width: 80px;
+        max-width: 80px;
         float: left;
         margin-right: 12px;
         img{
@@ -161,7 +162,7 @@
         }
     }
     .product-content{
-        width: calc(100% - 80px);
+        width: calc(100% - 92px);
         float: right;
         line-height: 1.35;
         h5{
