--- a/assets/sass/4-pages/_login.scss
+++ b/assets/sass/4-pages/_login.scss
@@ -12,6 +12,9 @@
     right: 15px;
 }
 
+.cookie-active .signin-modal{
+    top: 60px !important;
+}
 .login-wrap-modal{
     width: 100% !important;
 }
