--- a/assets/sass/2-basics/_body-elements.sass
+++ b/assets/sass/2-basics/_body-elements.sass
@@ -18,7 +18,7 @@ h1, h2, h3, h4, h5, h6
 	font-family: $font-default
 	font-weight: $font-medium
 	margin: 10px 0
-	line-height: unset
+	line-height: normal
 	color: $secondary-text
 
 h1
