--- a/assets/sass/3-component/_accordion.sass
+++ b/assets/sass/3-component/_accordion.sass
@@ -342,6 +342,8 @@
     .icons-left
       width: 100px
       float: left
+      a
+        color: $default
       i
         margin-right: 10px
         font-size: $font-m
