--- a/assets/sass/3-component/_card.scss
+++ b/assets/sass/3-component/_card.scss
@@ -464,7 +464,7 @@
         width: 180px;
         float: right;
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: flex-start;
         a{
             color: $secondary-text;
