--- a/assets/sass/3-component/_chat.sass
+++ b/assets/sass/3-component/_chat.sass
@@ -99,7 +99,8 @@
 				@include border-radius(7.5px)
 				img
 					width: auto
-					max-width: 100%	
+					max-width: 150px
+					margin: 10px 0	
 				&:before
 					position: absolute
 					left: -10px
