--- a/assets/sass/3-component/_sidebar-list.sass
+++ b/assets/sass/3-component/_sidebar-list.sass
@@ -258,6 +258,7 @@ ul.simple-list
     bottom: 20px
     left: 50%
     transform: translateX(-50%)
+    cursor: pointer
     svg
         width: 30px
 
