--- a/assets/sass/4-pages/_products.scss
+++ b/assets/sass/4-pages/_products.scss
@@ -82,7 +82,7 @@
         }
         &.price-wrapper{
             display: flex;
-            align-items: flex-end;
+            align-items: center;
         }
         
         .product-option{
@@ -156,6 +156,10 @@
         max-width: 80px;
         float: left;
         margin-right: 12px;
+        height: 55px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
         img{
             width: 100%;
             max-height: 55px;
